Добавлен раздел авторизации

--- a/HomeApp.Site/Views/Shared/TopMenuPartial.cshtml
+++ b/HomeApp.Site/Views/Shared/TopMenuPartial.cshtml
@@ -2,11 +2,11 @@
     <div class="container">
         <ul class="top-nav">
             <li class="dropdown top-nav__guest">
-                <a href="">Регистрация</a>
+                <a asp-area="Auth" asp-controller="Home" asp-action="Registration">Регистрация</a>
             </li>
 
             <li class="dropdown top-nav__guest">
-                <a href="">Войти</a>
+                <a asp-area="Auth" asp-controller="Home" asp-action="Login">Войти</a>
             </li>
 
             <li class="pull-right top-nav__icon">
