Большой рефакторинг + исправлена ошибка с специалистами

--- a/HomeApp.Site/Views/RealEstate/Detail.cshtml
+++ b/HomeApp.Site/Views/RealEstate/Detail.cshtml
@@ -4,7 +4,7 @@
 @using HomeApp.Core.Db.Entities.Models.Enums
 @using HomeApp.Core.Extentions
 @using HomeApp.Site.Utils
-@model HomeApp.Core.ViewModels.DetailModel
+@model HomeApp.Site.ViewModels.DetailViewModel
 
 @{
     RealEstate realEstate = Model.RealEstate;
