--- a/HomeApp.Site/Views/RealEstate/List.cshtml
+++ b/HomeApp.Site/Views/RealEstate/List.cshtml
@@ -2,7 +2,7 @@
 @using HomeApp.Core.Db.Entities
 @using HomeApp.Core.Db.Entities.Models.Enums
 @using HomeApp.Core.Extentions
-@model HomeApp.Core.ViewModels.RealEstateList
+@model HomeApp.Core.Models.RealEstatesModel
 
 @{
     OperationType operationType = (OperationType)ViewBag.OperationType;
