--- a/HomeApp.Site/Views/Shared/Components/Pagination/Default.cshtml
+++ b/HomeApp.Site/Views/Shared/Components/Pagination/Default.cshtml
@@ -1,7 +1,7 @@
-﻿@using HomeApp.Core.ViewModels
+﻿@using HomeApp.Site.ViewModels
 
 @{
-    RealEstateBagFilter filter = ViewBag.RealEstateBagFilter as RealEstateBagFilter;
+    RealEstateBagFilterViewModel filter = ViewBag.RealEstateBagFilter as RealEstateBagFilterViewModel;
 }
 
 <ul class="pagination">
