--- a/HomeApp.Site/Views/Shared/RealEstateWidgetItemG.cshtml
+++ b/HomeApp.Site/Views/Shared/RealEstateWidgetItemG.cshtml
@@ -1,6 +1,6 @@
 ﻿@using System.Globalization
 @using HomeApp.Core.ViewModels.Enums
-@model HomeApp.Core.ViewModels.GridWidgetItemModel
+@model HomeApp.Site.ViewModels.GridWidgetItemViewModel
 
 <a class="grid-widget__item" asp-controller="RealEstate" asp-action="Detail" asp-route-realEstateId="@Model.RealEstate.Id">
     @if (Model.GridWidgetItemWidth == GridWidgetItemWidth.PhotoMinPath400X266)
