--- a/HomeApp.Site/Views/Specialist/ProfilePartial.cshtml
+++ b/HomeApp.Site/Views/Specialist/ProfilePartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@using HomeApp.Core.Db.Entities.Models
 @using HomeApp.Core.Db.Entities.Models.Enums
-@model  HomeApp.Core.ViewModels.UserWithAd
+@model  HomeApp.Site.ViewModels.UserWithAdViewModel
 
 <div class="profile__img">
     <img src="@Url.Content(Model.User.PhotoMinPath)" alt="">
