--- a/HomeApp.Site/Views/Home/Index.cshtml
+++ b/HomeApp.Site/Views/Home/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@using HomeApp.Core.Db.Entities
-@using HomeApp.Core.ViewModels
+@using HomeApp.Core.Models
 @using HomeApp.Core.ViewModels.Enums
-@model HomeApp.Core.ViewModels.MainPage
+@using HomeApp.Site.ViewModels
+@model MainPageViewModel
 
 @section styles {
     <link rel="stylesheet" href="~/vendors/roost/vendors/bower_components/slick-carousel/slick/slick.css">
@@ -23,7 +24,7 @@
                         @foreach (RealEstate realEstate in Model.RealEstatesTop4Sale?.RealEstates ?? new List<RealEstate>())
                         {
                             <div class="col-xs-6">
-                                @Html.Partial("RealEstateWidgetItemG", new GridWidgetItemModel(realEstate, GridWidgetItemWidth.PhotoMinPath400X266))
+                                @Html.Partial("RealEstateWidgetItemG", new GridWidgetItemViewModel(realEstate, GridWidgetItemWidth.PhotoMinPath400X266))
                             </div>
                         }
                     </div>
@@ -42,7 +43,7 @@
                         @foreach (RealEstate realEstate in Model.RealEstatesTop4Rent?.RealEstates ?? new List<RealEstate>())
                         {
                             <div class="col-xs-6">
-                                @Html.Partial("RealEstateWidgetItemG", new GridWidgetItemModel(realEstate, GridWidgetItemWidth.PhotoMinPath400X266))
+                                @Html.Partial("RealEstateWidgetItemG", new GridWidgetItemViewModel(realEstate, GridWidgetItemWidth.PhotoMinPath400X266))
                             </div>
                         }
                     </div>
@@ -61,7 +62,7 @@
                         @foreach (RealEstate realEstate in Model.RealEstatesTopLocation?.RealEstates ?? new List<RealEstate>())
                         {
                             <div class="col-xs-4">
-                                @Html.Partial("RealEstateWidgetItemG", new GridWidgetItemModel(realEstate, GridWidgetItemWidth.PhotoMinPath500X500))
+                                @Html.Partial("RealEstateWidgetItemG", new GridWidgetItemViewModel(realEstate, GridWidgetItemWidth.PhotoMinPath500X500))
                             </div>
                         }
                     </div>
@@ -77,7 +78,7 @@
                         <small>Топ 9 специалистов на homeapp.pro</small>
                     </div>
                     <div class="grid-widget grid-widget--listings">
-                        @foreach (UserWithRealEstateCount agentTop in Model.AgentTops?.UsersWithRealEstateCount ?? new List<UserWithRealEstateCount>())
+                        @foreach (UserWithRealEstateCountModel agentTop in Model.AgentTops?.UsersWithRealEstateCount ?? new List<UserWithRealEstateCountModel>())
                         {
                             <div class="col-xs-4">
                                 @Html.Partial("UserWidgetItemG", agentTop)
