--- a/HomeApp.Site/Areas/Auth/Views/Shared/_Layout.cshtml
+++ b/HomeApp.Site/Areas/Auth/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
     <header id="header">
         <div class="header__main">
             <div class="container">
-                <a asp-controller="Home" asp-action="Index" class="logo">
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="logo">
                     <img src="~/vendors/roost/img/logo.png" alt="">
                     <div class="logo__text">
                         <span>HomeApp pro</span>
