--- a/HomeApp.Site/RazorTemplates/Emails/ConfirmRu.cshtml
+++ b/HomeApp.Site/RazorTemplates/Emails/ConfirmRu.cshtml
@@ -1,5 +1,4 @@
-﻿@using HomeApp.Core.Db.Entities
-@model HomeApp.Core.Db.Entities.User
+﻿@model HomeApp.Core.Models.EmailConfirmModel
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
@@ -132,7 +131,7 @@
                                 <tr><td valign="top" width="100%" style="line-height: 60px; font-size: 0" height="60;">&nbsp;</td></tr>
                                 <tr>
                                     <td style="text-align: center;">
-                                        <a href="http://localhost:63903/confirm?userId=@Model.Id&activeCode=@Model.Membership.ActiveCode" style="font-family: Arial, sans-serif; font-size: 13px; color: #ffffff !important;text-decoration:none !important; line-height: 100%; padding-bottom: 12px; padding-right: 20px; padding-left: 20px; padding-top: 14px; border-radius: 2px; background-color: #4595e7;">
+                                        <a href="@Model.CallbackUrl" style="font-family: Arial, sans-serif; font-size: 13px; color: #ffffff !important;text-decoration:none !important; line-height: 100%; padding-bottom: 12px; padding-right: 20px; padding-left: 20px; padding-top: 14px; border-radius: 2px; background-color: #4595e7;">
                                             <font color="#fff">Подтвердить регистрацию</font>
                                         </a>
                                         <a href="" style="text-decoration: none;"></a>
