Исправлены ошибки с перенаправлением пользователя

--- a/HomeApp.Site/Areas/Auth/Views/Home/Confirm.cshtml
+++ b/HomeApp.Site/Areas/Auth/Views/Home/Confirm.cshtml
@@ -24,9 +24,8 @@
                                 <h2>Ваш акаунт активирован!</h2>
                                 <p>
                                     Мы активировали ваш аккаунт. Спасибо за регистрацию на сайте homeapp.pro.
-                                    Теперь вы можете перейти на сайт, нажав на синюю кнопку ниже и продолжить работу.
                                 </p>
-                                <a href="http://localhost:63903?sessionId=@Model.Id&token=@Model.Token" class="btn btn-primary">Перейти на сайт</a>
+                                <a href="@Url.Action("Login", "Home", new {area="Auth"})" class="btn btn-primary">Войти</a>
                             </div>
                         }
                         else
