Исправлены ошибки с перенаправлениями

--- a/HomeApp.Site/Areas/Auth/Views/Home/Confirm.cshtml
+++ b/HomeApp.Site/Areas/Auth/Views/Home/Confirm.cshtml
@@ -37,6 +37,7 @@
                                     Мы не смоги активировать ваш акаунт. Пожалуйста попробуйте перейти по ссылке которую
                                     вы получили в письме еще раз или обратитесь в службу поддержки.
                                 </p>
+                                <a href="@Url.Action("Index", "Home", new {area=""})" class="btn btn-primary">Вернуться на сайт</a>
                             </div>
                         }
                     </div>
