--- a/HomeApp.Site/Areas/Auth/Views/Home/Login.cshtml
+++ b/HomeApp.Site/Areas/Auth/Views/Home/Login.cshtml
@@ -1,6 +1,10 @@
-﻿@using HomeApp.Site.Areas.Auth.ViewModels
+﻿@using HomeApp.Core.Identity.CustomProvider
+@using Microsoft.AspNetCore.Authentication
+@using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.Mvc.ModelBinding
 @model HomeApp.Site.Areas.Auth.ViewModels.LoginViewModel
+@inject SignInManager<CustomIdentityUser> SignInManager
+
 <div class="row">
     <div class="col-sm-4"></div>
     <div class="col-sm-4 card">
@@ -44,20 +48,40 @@
                         <div class="text-center">
                             <a href="#top-nav-forgot-password" data-toggle="tab"><small>Забыли пароль?</small></a>
                         </div>
+                    </form>
+
+                    @{
+                        List<AuthenticationScheme> loginProviders = (await SignInManager.GetExternalAuthenticationSchemesAsync()).ToList();
+                    }
+                    @if (loginProviders.Count > 0)
+                    {
                         <div class="top-nav__auth">
                             <span>или</span>
                             <div>Войдите используя</div>
-                            <a href="" class="mdc-bg-blue-500">
-                                <i class="zmdi zmdi-facebook"></i>
-                            </a>
-                            <a href="" class="mdc-bg-cyan-500">
-                                <i class="zmdi zmdi-twitter"></i>
-                            </a>
-                            <a href="" class="mdc-bg-red-400">
-                                <i class="zmdi zmdi-google"></i>
-                            </a>
+
+                            @foreach (AuthenticationScheme provider in loginProviders)
+                            {
+                                string cls = $"zmdi-{provider.Name.ToLower()}";
+                                string ids = $"{provider.Name.ToLower()}_form";
+
+
+                                <a href="javascript:{}" onclick="document.getElementById('@ids').submit();" class="mdc-bg-blue-500">
+                                    <form id="@ids" asp-area="Auth" asp-controller="Home" asp-action="ExternalLogin" asp-route-returnurl="@ViewBag.ReturnUrl" method="post" asp-antiforgery="true">
+                                    <input type="hidden" name="provider" value="@provider.Name"/>
+                                    </form>
+                                    <i class="zmdi @cls"></i>
+                                </a>
+                            }
+
+
+                            @*<a href="" class="mdc-bg-cyan-500">
+                                    <i class="zmdi zmdi-twitter"></i>
+                                </a>
+                                <a href="" class="mdc-bg-red-400">
+                                    <i class="zmdi zmdi-google"></i>
+                                </a>*@
                         </div>
-                    </form>
+                    }
                     <form class="tab-pane fade forgot-password" id="top-nav-forgot-password">
                         <a href="#top-nav-login" class="top-nav__back" data-toggle="tab"></a>
                         <p>Для востановления пароля укажите вашу почту и нажмите "Сбросить пароль"</p>
