--- a/HomeApp.Site/Areas/Auth/Views/Home/Registration.cshtml
+++ b/HomeApp.Site/Areas/Auth/Views/Home/Registration.cshtml
@@ -1,6 +1,10 @@
-﻿@using HomeApp.Site.Areas.Auth.ViewModels
+﻿@using HomeApp.Core.Identity.CustomProvider
+@using Microsoft.AspNetCore.Authentication
+@using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.Mvc.ModelBinding
 @model HomeApp.Site.Areas.Auth.ViewModels.RegistrationViewModel
+@inject SignInManager<CustomIdentityUser> SignInManager
+
 <div class="row">
     <div class="col-sm-4"></div>
     <div class="col-sm-4 card">
@@ -66,17 +70,7 @@
                     </p>
                     <button class="btn btn-primary btn-block m-t-10 m-b-10" type="submit">Готово</button>
                     <div class="top-nav__auth">
-                        <span>или</span>
-                        <div>Войдите используя</div>
-                        <a href="" class="mdc-bg-blue-500">
-                            <i class="zmdi zmdi-facebook"></i>
-                        </a>
-                        <a href="" class="mdc-bg-cyan-500">
-                            <i class="zmdi zmdi-twitter"></i>
-                        </a>
-                        <a href="" class="mdc-bg-red-400">
-                            <i class="zmdi zmdi-google"></i>
-                        </a>
+                        @Html.Partial("SocialPartial")
                     </div>
                 </form>
             </div>
