Добавлена зона Office

--- a/HomeApp.Site/Views/Shared/TopMenuPartial.cshtml
+++ b/HomeApp.Site/Views/Shared/TopMenuPartial.cshtml
@@ -14,7 +14,7 @@
 
                     <ul class="dropdown-menu">
                         <li><a href="">Профайл</a></li>
-                        <li><a href="">Личный кабинет</a></li>
+                        <li><a asp-area="Office" asp-controller="Home" asp-action="Index">Личный кабинет</a></li>
                         <li><a asp-action="Logout" asp-controller="Home" asp-area="Auth">Выход</a></li>
                     </ul>
                 </li>
