Работа над созданием профиля. Исправление ошибок. Доработки.

--- a/HomeApp.Site/Areas/Auth/Views/Home/Confirm.cshtml
+++ b/HomeApp.Site/Areas/Auth/Views/Home/Confirm.cshtml
@@ -1,5 +1,4 @@
-﻿@using HomeApp.Core.Db.Entities
-@model HomeApp.Core.Db.Entities.Session
+﻿@model HomeApp.Core.Db.Entities.Session
 <section class="section">
     <div class="container">
         <header class="section__title">
