--- a/HomeApp.Site/Views/RealEstate/AgentInfoPartial.cshtml
+++ b/HomeApp.Site/Views/RealEstate/AgentInfoPartial.cshtml
@@ -14,7 +14,7 @@
             <div class="media-body list-group__text">
                 @if (Model is PersonProfessional)
                 {
-                    <strong>@(((Rialtor)Model).LastName?.Ru) @(((Rialtor)Model).FirstName?.Ru) @(((Rialtor)Model).MidName?.Ru)</strong>
+                    <strong>@(((Realtor)Model).LastName?.Ru) @(((Realtor)Model).FirstName?.Ru) @(((Realtor)Model).MidName?.Ru)</strong>
                 }
                 else if (Model is Professional)
                 {
