--- a/HomeApp.Site/Views/Shared/UserItemL.cshtml
+++ b/HomeApp.Site/Views/Shared/UserItemL.cshtml
@@ -12,7 +12,7 @@
                     @if (Model is PersonProfessional)
                     {
 
-                        @(((Rialtor)Model).LastName?.Ru) @(((Rialtor)Model).FirstName?.Ru) @(((Rialtor)Model).MidName?.Ru)
+                        @(((Realtor)Model).LastName?.Ru) @(((Realtor)Model).FirstName?.Ru) @(((Realtor)Model).MidName?.Ru)
                     }
                     else if (Model is Professional)
                     {
