--- a/HomeApp.Site/Views/Specialist/HeaderPartial.cshtml
+++ b/HomeApp.Site/Views/Specialist/HeaderPartial.cshtml
@@ -4,7 +4,7 @@
 @if (Model is PersonProfessional)
             {
 
-    <h2>@(((Rialtor)Model).LastName?.Ru) @(((Rialtor)Model).FirstName?.Ru) @(((Rialtor)Model).MidName?.Ru)</h2>
+    <h2>@(((Realtor)Model).LastName?.Ru) @(((Realtor)Model).FirstName?.Ru) @(((Realtor)Model).MidName?.Ru)</h2>
 }
 else if (Model is Professional)
 {
