--- a/HomeApp.Site/Areas/Office/Views/Profile/SetPersonProfile.cshtml
+++ b/HomeApp.Site/Areas/Office/Views/Profile/SetPersonProfile.cshtml
@@ -1,27 +1,7 @@
-﻿@using HomeApp.Core.Identity.CustomProvider
-@using Microsoft.AspNetCore.Identity
-@inject UserManager<CustomIdentityUser> UserManager
-
-@{
-    CustomIdentityUser user = UserManager.FindByNameAsync(Context.User.Identity.Name).Result;
-    string userName = user.UserName ?? user.Email;
-}
-
-<header class="main__title text-center">
-    <h2>Настройка профайла</h2>
-    <small>Уважаемый <b>@userName</b>, чтобы воспользоваться личным кабинетом вам необходимо активировать ваш профайл.</small>
-    <small>Следуйте инструкциям ниже, это займет совсем немного времени!</small>
-</header>
+﻿@Html.Partial("Partials/Header")
 
 <div class="submit-property">
-    <ul class="submit-property__steps">
-        <li class="passed"><a asp-area="Office" asp-controller="Profile" asp-action="SetUserType">1</a></li>
-        <li class="active"><a>2</a></li>
-        <li><a>3</a></li>
-        <li><a>4</a></li>
-        <li><a>5</a></li>
-        <li class="submit-property__caret"></li>
-    </ul>
+    @Html.Partial("Partials/Steps",2)
     <div class="tab-content submit-property__content">
         <div class="tab-pane fade in active">
             <div class="card">
@@ -47,7 +27,7 @@
                                 <label>Имя</label>
                             </div>
                         </div>
-                        
+
                         <div class="col-sm-4">
                             <div class="form-group form-group--float form-group--float-center">
                                 <input type="text" class="form-control text-center">
@@ -56,13 +36,13 @@
                             </div>
                         </div>
                     </div>
-                    
+
                     <div class="form-group form-group--float form-group--float-center">
                         <input type="text" class="form-control text-center">
                         <i class="form-group__bar"></i>
                         <label>Дата рождения</label>
                     </div>
-                    
+
                     <div class="form-group">
                         <label>Ваш пол</label>
                         <div class="btn-group btn-group-justified" data-toggle="buttons">
@@ -77,7 +57,7 @@
                             </label>
                         </div>
                     </div>
-                    
+
                     <div class="row">
                         <div class="col-sm-6">
                             <div class="form-group form-group--float form-group--float-center">
@@ -95,7 +75,7 @@
                             </div>
                         </div>
                     </div>
-                    
+
                     <div class="form-group form-group--float form-group--float-center">
                         <input type="text" class="form-control text-center">
                         <i class="form-group__bar"></i>
