--- a/HomeApp.Site/Areas/Office/Views/Profile/SetUserType.cshtml
+++ b/HomeApp.Site/Areas/Office/Views/Profile/SetUserType.cshtml
@@ -1,28 +1,10 @@
-﻿@using HomeApp.Core.Identity.CustomProvider
-@using Microsoft.AspNetCore.Identity
-@model HomeApp.Site.Areas.Office.ViewModels.SetUserTypeViewModel
-@inject UserManager<CustomIdentityUser> UserManager
+﻿@model HomeApp.Site.Areas.Office.ViewModels.SetUserTypeViewModel
 
-@{
-    CustomIdentityUser user = UserManager.FindByNameAsync(Context.User.Identity.Name).Result;
-    string userName = user.UserName ?? user.Email;
-}
 
-<header class="main__title text-center">
-    <h2>Настройка профайла</h2>
-    <small>Уважаемый <b>@userName</b>, чтобы воспользоваться личным кабинетом вам необходимо активировать ваш профайл.</small>
-    <small>Следуйте инструкциям ниже, это займет совсем немного времени!</small>
-</header>
+@Html.Partial("Partials/Header")
 
 <div class="submit-property">
-    <ul class="submit-property__steps">
-        <li class="active"><a>1</a></li>
-        <li><a>2</a></li>
-        <li><a>3</a></li>
-        <li><a>4</a></li>
-        <li><a>5</a></li>
-        <li class="submit-property__caret"></li>
-    </ul>
+    @Html.Partial("Partials/Steps", 1)
     <div class="tab-content submit-property__content">
         <div class="tab-pane fade in active">
             <div class="card">
@@ -39,7 +21,7 @@
                                 Да, я риэлтор
                             </label>
                         </div>
-                        <input  type="hidden" name="UserId" value="@Model.UserId"/>
+                        <input type="hidden" name="UserId" value="@Model.UserId"/>
                     </div>
                     <a href="javascript:{}" onclick="document.getElementById('is-realtor').submit();" data-toggle="tab" class="btn btn--circle btn-primary submit-property__button">
                         <i class="zmdi zmdi-long-arrow-right"></i>
